added map zoom and a little responsiveness

--- a/sleterritory.html
+++ b/sleterritory.html
@@ -73,7 +73,7 @@
 
 <div class="row">
     <div class="col-md-2 col-md-offset-1 img-columns text-center">
-        <img src="img/Paladin_fp.png" class="img-responsive index-paladins">
+        <img src="img/Paladin_fp.png" class="img-responsive index-paladins hidden-xs hidden-sm">
     </div>
     <div class="col-md-6">
         <!-- Main jumbotron for a primary marketing message or call to action -->
@@ -83,7 +83,7 @@
             <p>We are aware, we are awake. Do not be part of those the Soul Eaters take!</p>
         </div>
     </div>
-    <div class="col-md-3 img-columns text-center">
+    <div class="col-md-3 img-columns text-center hidden-xs hidden-sm">
         <img src="img/berzerker.png" class="img-responsive index-paladins">
     </div>
 </div>
@@ -107,7 +107,7 @@
         <div class="col-sm-9 col-md-9 col-md-offset-1 text-center territory-maps">
             <h1 id="sle-map-title" class="page-header"></h1>
             <div class="row">
-                <div id="sle-maps" class="col-md-12">
+                <div id="sle-maps" class="col-md-12 map">
 
                 </div>
             </div>
