--- a/sleterritory.html
+++ b/sleterritory.html
@@ -79,8 +79,9 @@
         <!-- Main jumbotron for a primary marketing message or call to action -->
         <div class="jumbotron text-center">
             <h1>SLE Territory</h1>
-            <p>The Soul Eaters tribe is dedicated to camaraderie, strategy and diplomacy. We are a fair tribe that views success as something measured through the development of our tribesmen.  If we attack, the attack is supported by those capable.  If we are to defend, we rally in defense. Expect nothing less than what you perceive.</p>
-            <p>We are aware, we are awake. Do not be part of those the Soul Eaters take!</p>
+            <p>Here are the territories of SLI on US9.  The center of our world is located at 500, 500.</p>
+            <p>Click on a map to see the enlarged version.</p>
+            <p>These maps update at regular intervals to reflect changes in the world.</p>
         </div>
     </div>
     <div class="col-md-3 img-columns text-center hidden-xs hidden-sm">
@@ -88,33 +89,40 @@
     </div>
 </div>
 <div class="my-container">
-    <div class="row">
-        <div class="col-sm-3 col-md-1 sidebar text-center">
-            <div id="accordion">
-                <h3>Maps</h3>
-                <div>
-                    <ul class="nav nav-sidebar">
-                        <li id="sle-overall">US9</li>
-                        <li id="sle-nw">NW</li>
-                        <li id="sle-ne">NE</li>
-                        <li id="sle-sw">SW</li>
-                        <li id="sle-se">SE</li>
-                    </ul>
-                </div>
-            </div>
+    <div class="row  row-bottom-margin-80">
+        <div class="overall-map-col col-md-4 text-center">
+            <h1 class="map-title">Overall Territories</h1>
+            <a href="#overallModal" data-toggle="modal"><img class="img-thumbnail" src="http://www.tw2-tools.com/us9/img_map/hash/d60f6581515f6780eabd4b4fb195d191/"></a>
+            <div class="modal fade img-responsive" id="overallModal" role="dialog"><img src="http://www.tw2-tools.com/us9/img_map/hash/d60f6581515f6780eabd4b4fb195d191/"></div>
         </div>
-
-        <div class="col-sm-9 col-md-9 col-md-offset-1 text-center territory-maps">
-            <h1 id="sle-map-title" class="page-header"></h1>
+        <div class="col-md-8">
             <div class="row">
-                <div id="sle-maps" class="col-md-12 map">
-
+                <div class="col-md-6 text-center">
+                    <h1 class="map-title">North West</h1>
+                    <a href="#nwModal" data-toggle="modal"><img class="img-thumbnail quad-maps" src="http://www.tw2-tools.com/us9/img_map/hash/b71f46fbb534a501d0233f1f8dfd4d97/"></a>
+                    <div class="modal fade img-responsive" id="nwModal" role="dialog"><img src="http://www.tw2-tools.com/us9/img_map/hash/b71f46fbb534a501d0233f1f8dfd4d97/"></div>
+                </div>
+                <div class="col-md-6 text-center">
+                    <h1 class="map-title">North East</h1>
+                    <a href="#neModal" data-toggle="modal"><img class="img-thumbnail quad-maps" src="http://www.tw2-tools.com/us9/img_map/hash/15523059eac02bcf5923460ec4ad1d33/"></a>
+                    <div class="modal fade img-responsive" id="neModal" role="dialog"><img src="http://www.tw2-tools.com/us9/img_map/hash/15523059eac02bcf5923460ec4ad1d33/"></div>
                 </div>
             </div>
-
+            <div class="row">
+                <div class="col-md-6 text-center">
+                    <h1 class="map-title">South West</h1>
+                    <a href="#swModal" data-toggle="modal"><img class="img-thumbnail quad-maps" src="http://www.tw2-tools.com/us9/img_map/hash/0bf2e843558bb2f17529ec3ea70722ae/"></a>
+                    <div class="modal fade img-responsive" id="swModal" role="dialog"><img src="http://www.tw2-tools.com/us9/img_map/hash/0bf2e843558bb2f17529ec3ea70722ae/"></div>
+                </div>
+                <div class="col-md-6 text-center">
+                    <h1 class="map-title">South East</h1>
+                    <a href="#seModal" data-toggle="modal"><img class="img-thumbnail quad-maps" src="http://www.tw2-tools.com/us9/img_map/hash/179d850234a03dc1f6735baa2e5186b9/"></a>
+                    <div class="modal fade img-responsive" id="seModal" role="dialog"><img src="http://www.tw2-tools.com/us9/img_map/hash/179d850234a03dc1f6735baa2e5186b9/"></div>
+                </div>
+            </div>
         </div>
-
     </div>
+
 
 </div>
 
